change package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.dialerapp'
+    namespace 'com.okuda.dialerapp'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.dialerapp"
+        applicationId "com.okuda.dialerapp"
         minSdk 29
         targetSdk 33
         versionCode 1
